[gd_scene load_steps=21 format=3 uid="uid://re6s5jcw6eiw"]

[ext_resource type="Script" path="res://scenes/market_ui.gd" id="1_c85yt"]
[ext_resource type="Texture2D" uid="uid://6dhaiqp4503h" path="res://assets/MainMenuUI/ExitButton.png" id="2_eqe76"]
[ext_resource type="Texture2D" uid="uid://bwy6njhmg1hyr" path="res://assets/MainMenuUI/MMBackground.png" id="2_upqao"]
[ext_resource type="Texture2D" uid="uid://4vjgp2kpdk45" path="res://assets/MarketUI/WeaponsButtonPressed.png" id="3_2r615"]
[ext_resource type="Texture2D" uid="uid://4j8pwm1u7q64" path="res://assets/MainMenuUI/ExitButtonPressed.png" id="3_ft2jy"]
[ext_resource type="Texture2D" uid="uid://ct1e1qvciut3p" path="res://assets/MainMenuUI/ExitButtonHover.png" id="4_ghoaa"]
[ext_resource type="Texture2D" uid="uid://dj2i8f2m65e3c" path="res://assets/MarketUI/WeaponsButton.png" id="4_vp5ft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wiysv"]
bg_color = Color(0.898039, 0.960784, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw0sc"]
bg_color = Color(0.898039, 0.960784, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3ets"]
bg_color = Color(0.345098, 0.717647, 0.776471, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nw3dd"]
bg_color = Color(0.560784, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwquq"]
bg_color = Color(0.560784, 1, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3i4cr"]
bg_color = Color(0, 0.443137, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iim4a"]
bg_color = Color(0, 0.443137, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6casn"]
bg_color = Color(0.560784, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptq3v"]
bg_color = Color(0.560784, 1, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwqcf"]
bg_color = Color(0, 0.443137, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5gur"]
bg_color = Color(0.345098, 0.717647, 0.776471, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1ljw"]
bg_color = Color(0.560784, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b24l7"]
bg_color = Color(0.560784, 1, 0, 1)

[node name="MarketUI" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_c85yt")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 6
offset_right = 768.0
offset_bottom = 768.0
texture = ExtResource("2_upqao")
expand_mode = 5

[node name="SubBackground1" type="Panel" parent="."]
offset_right = 768.0
offset_bottom = 103.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wiysv")

[node name="SubBackground2" type="Panel" parent="."]
offset_top = 642.0
offset_right = 768.0
offset_bottom = 768.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pw0sc")

[node name="Market" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -384.0
offset_right = 384.0
offset_bottom = -281.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.443137, 0.741176, 1)
theme_override_font_sizes/font_size = 75
text = "MARKET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrimaryWeaponsButton" type="TextureButton" parent="."]
offset_top = 103.0
offset_right = 384.0
offset_bottom = 138.0
texture_normal = ExtResource("3_2r615")
stretch_mode = 0

[node name="Label" type="Label" parent="PrimaryWeaponsButton"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.345098, 0.717647, 0.776471, 1)
text = "PRIMARY WEAPONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondaryWeaponsButton" type="TextureButton" parent="."]
offset_left = 384.0
offset_top = 103.0
offset_right = 768.0
offset_bottom = 138.0
texture_normal = ExtResource("4_vp5ft")
stretch_mode = 0

[node name="Label" type="Label" parent="SecondaryWeaponsButton"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.345098, 0.717647, 0.776471, 1)
text = "SECONDARY WEAPONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
texture_filter = 6
offset_left = 49.0
offset_top = 672.0
offset_right = 284.0
offset_bottom = 764.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2_eqe76")
texture_pressed = ExtResource("3_ft2jy")
texture_hover = ExtResource("4_ghoaa")

[node name="ExitLabel" type="Label" parent="ExitButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 223.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.345098, 0.717647, 0.776471, 1)
theme_override_font_sizes/font_size = 40
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsAvailable" type="Label" parent="." groups=["Persist"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 98.0
offset_top = 311.0
offset_right = 367.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.443137, 0.741176, 1)
theme_override_font_sizes/font_size = 25
text = "CREDITS AVAILABLE: 0"
horizontal_alignment = 1

[node name="PrimaryWeapons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -246.0
offset_right = 384.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PrimaryWeapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0390625
anchor_top = 0.0556586
anchor_right = 0.960938
anchor_bottom = 0.944341
offset_top = 1.94805
offset_right = 2.0
offset_bottom = 4.05194
theme_override_styles/panel = SubResource("StyleBoxFlat_q3ets")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PrimaryWeapons/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="PrimaryWeapons/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Row1" type="Control" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList"]
custom_minimum_size = Vector2(0, 230)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer"]
layout_mode = 2

[node name="PWButton1" type="Button" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer" groups=["PWButtons"]]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_nw3dd")
theme_override_styles/hover = SubResource("StyleBoxFlat_pwquq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3i4cr")
text = "SELECTED"

[node name="Label1" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/PWButton1"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_iim4a")
text = "PISTOL"
horizontal_alignment = 1

[node name="StatsLabel1" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/PWButton1"]
layout_mode = 0
offset_left = 1.0
offset_top = 23.0
offset_right = 114.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_font_sizes/font_size = 10
text = "FIRERATE: 300 RPM
BULLET SPEED: 750 FPS
ROUNDS PER MAG: 15"

[node name="Spacer" type="Control" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PWButton2" type="Button" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer" groups=["PWButtons"]]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6casn")
theme_override_styles/hover = SubResource("StyleBoxFlat_ptq3v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwqcf")
text = "COST: 500 CREDITS"

[node name="LabeL2" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/PWButton2"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_iim4a")
text = "SMG"
horizontal_alignment = 1

[node name="StatsLabel2" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/PWButton2"]
layout_mode = 0
offset_top = 23.0
offset_right = 111.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_font_sizes/font_size = 10
text = "FIRERATE: 800 RPM
BULLET SPEED: 850 FPS
ROUNDS PER MAG: 18"

[node name="Row2" type="Control" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList"]
custom_minimum_size = Vector2(0, 230)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer"]
layout_mode = 2

[node name="PWButton3" type="Button" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer" groups=["PWButtons"]]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6casn")
theme_override_styles/hover = SubResource("StyleBoxFlat_ptq3v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwqcf")
text = "COST: 1500 CREDITS"

[node name="Label3" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer/PWButton3"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_iim4a")
text = "LMG"
horizontal_alignment = 1

[node name="StatsLabel3" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer/PWButton3"]
layout_mode = 0
offset_left = 2.0
offset_top = 24.0
offset_right = 119.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_font_sizes/font_size = 10
text = "FIRERATE: 1000 RPM
BULLET SPEED: 1050 FPS
ROUNDS PER MAG: 50"

[node name="Spacer" type="Control" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PWButton4" type="Button" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer" groups=["PWButtons"]]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6casn")
theme_override_styles/hover = SubResource("StyleBoxFlat_ptq3v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwqcf")
text = "COST: 1000 CREDITS"

[node name="Label4" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer/PWButton4"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_iim4a")
text = "AR
"
horizontal_alignment = 1

[node name="StatsLabel4" type="Label" parent="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer/PWButton4"]
layout_mode = 0
offset_top = 23.0
offset_right = 111.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_font_sizes/font_size = 10
text = "FIRERATE: 800 RPM
BULLET SPEED: 950 FPS
ROUNDS PER MAG: 30"

[node name="SecondaryWeapons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -246.0
offset_right = 384.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SecondaryWeapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0390625
anchor_top = 0.0556586
anchor_right = 0.960938
anchor_bottom = 0.944341
offset_top = 1.94805
offset_right = 2.0
offset_bottom = 4.05194
theme_override_styles/panel = SubResource("StyleBoxFlat_k5gur")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="SecondaryWeapons/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="SecondaryWeapons/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Row1" type="Control" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList"]
custom_minimum_size = Vector2(0, 230)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer"]
layout_mode = 2

[node name="SWButton1" type="Button" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer" groups=["SWButtons"]]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_n1ljw")
theme_override_styles/hover = SubResource("StyleBoxFlat_ptq3v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwqcf")
text = "EQUIPPED"

[node name="Label1" type="Label" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/SWButton1"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 23.0
theme_override_styles/normal = SubResource("StyleBoxFlat_iim4a")
text = "PISTOL"
horizontal_alignment = 1

[node name="StatsLabel1" type="Label" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/SWButton1"]
layout_mode = 0
offset_top = 23.0
offset_right = 111.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_font_sizes/font_size = 10
text = "FIRERATE: 300 RPM
BULLET SPEED: 750 FPS
ROUNDS PER MAG: 15"

[node name="Spacer" type="Control" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="SWButton2" type="Button" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer" groups=["SWButtons"]]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_b24l7")
theme_override_styles/hover = SubResource("StyleBoxFlat_ptq3v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwqcf")
text = "COST: 500 CREDITS"

[node name="LabeL2" type="Label" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/SWButton2"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 23.0
theme_override_styles/normal = SubResource("StyleBoxFlat_iim4a")
text = "MACHINE PISTOL"
horizontal_alignment = 1

[node name="StatsLabel2" type="Label" parent="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/SWButton2"]
layout_mode = 0
offset_top = 23.0
offset_right = 111.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.898039, 0.960784, 1, 1)
theme_override_font_sizes/font_size = 10
text = "FIRERATE: 800 RPM
BULLET SPEED: 850 FPS
ROUNDS PER MAG: 18"

[connection signal="pressed" from="PrimaryWeaponsButton" to="." method="_on_primary_weapons_button_pressed"]
[connection signal="pressed" from="SecondaryWeaponsButton" to="." method="_on_secondary_weapons_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/PWButton1" to="." method="_on_pw_button_1_pressed"]
[connection signal="pressed" from="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/PWButton2" to="." method="_on_pw_button_2_pressed"]
[connection signal="pressed" from="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer/PWButton3" to="." method="_on_pw_button_3_pressed"]
[connection signal="pressed" from="PrimaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row2/MarginContainer/HBoxContainer/PWButton4" to="." method="_on_pw_button_4_pressed"]
[connection signal="pressed" from="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/SWButton1" to="." method="_on_sw_button_1_pressed"]
[connection signal="pressed" from="SecondaryWeapons/PanelContainer/MarginContainer/ScrollContainer/ActionList/Row1/MarginContainer/HBoxContainer/SWButton2" to="." method="_on_sw_button_2_pressed"]
